--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="champ-recherche">
         <label for="nom">Trouver ma patinoire :</label>
-        <input type="text" id="recherche" placeholder="Nom (ex: La Fontaine)">
+        <input type="text" id="recherche" placeholder="Nom (ex: Laurier)">
     </div>
 
     <div id="resultats">
